--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id  'com.google.gms.google-services'
 }
 
 android {
@@ -45,4 +46,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.mlkit:image-labeling:17.0.7'
     implementation 'com.google.android.gms:play-services-mlkit-image-labeling:16.0.7'
+    implementation 'com.android.support:design:28.0.0'
 }
